Fixed horizontal scrolling, added Anim_scroll to the page, added fades to hero_sections and focus_areas

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -25,6 +25,6 @@
   transform: translateY(-10px);
 }
 
-/* html {
-  scroll-behavior: smooth; */
-/* } */
+ body {
+  @apply overflow-x-hidden; 
+}
